# cleartext2

./: README.md  pyproject.toml
checkpoints/: clf_dict.ckpt
chrome/: README.md  content.js  manifest.json  popup.html  popup.js
cleartext2/: app.py  predict_weighted.py
experiments/: .gitignore  README.md  embed.py  eval.py
experiments/tune/: README.md  pyproject.toml  tune.py
experiments/tune/cleartext2_tune/: __main__.py  tune.py
experiments/tune/cleartext2_tune/conf/: smoke.yaml  tune.yaml
experiments/tune/cleartext2_tune/conf/data/: benchls.yaml
experiments/tune/cleartext2_tune/conf/module/: ls.yaml
experiments/tune/cleartext2_tune/data/: __init__.py  _utils.py  benchls.py
experiments/tune/cleartext2_tune/module/: __init__.py  ls.py
experiments/tune/conf/: smoke.yaml  tune.yaml
experiments/tune/conf/data/: benchls.yaml
experiments/tune/conf/dataset/: benchls.yaml
tests/: README.md  test_smoke.py
