[tool.poetry]
name = "cleartext2"
version = "0.1.0"
description = ""
authors = ["Ben Wallace <<bencwallace@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^1.9.0", source = "pytorch-cpu" }
transformers = "^4.44.0"
numpy = "<2"
wordfreq = "^3.1.1"
fastapi = "^0.112.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
fastapi = {extras = ["standard"], version = "^0.112.1"}
pytest = "^8.3.2"
tabulate = "^0.9.0"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
