[tool.poetry]
name = "cleartext2-tune"
version = "0.1.0"
description = ""
authors = ["Ben Wallace <<bencwallace@gmail.com>>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^1.9.0", source = "pytorch-cu117" }
transformers = "^4.44.0"
numpy = "<2"
pytorch-lightning = "*"
wandb = "^0.17.7"
hydra-core = "^1.3.2"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
